tests/integration/fail/enum_contract_non_enum_value.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::BlameError'
123 | [| 'foo, 'bar |]
